Update: Button Group active and focus state z-index to prevent styles from overlapping

--- a/packages/clay/src/scss/components/_button-groups.scss
+++ b/packages/clay/src/scss/components/_button-groups.scss
@@ -1,3 +1,17 @@
+.btn-group,
+.btn-group-vertical {
+	> .btn {
+		&:focus {
+			z-index: 3;
+		}
+
+		&:active,
+		&.active {
+			z-index: 2;
+		}
+	}
+}
+
 .btn-toolbar {
 	.btn-group,
 	.input-group {
